[package]
name = "arma_storage"
version = "0.1.0"
authors = ["Chronophylos <nikolai@chronophylos.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow      = "1.0"
bincode     = "1.3.1"
env_logger  = "0.7.1"
lazy_static = "1.4"
log         = "0.4"
pest        = "2.1.3"
pest_derive = "2.1.0"
serde       = { version = "1.0", features = ["derive"] }
thiserror   = "1.0"